fixing issue on mobile with splash page

--- a/styles/index.css
+++ b/styles/index.css
@@ -64,6 +64,7 @@ header {
   background-image: url('../images/vines.png');
   background-size: contain;
   background-repeat: no-repeat;
+  margin: 4rem 0;
 }
 
 .header {
@@ -76,7 +77,7 @@ header {
 }
 
 .star {
-  height: 100px;
+  width: 100px;
 }
 
 .subtitle {
@@ -142,8 +143,8 @@ marquee {
 }
 
 footer {
-  margin: 0.5rem 0 0 0;
-  font-size: 12px;
+  margin: 2rem 0 0 0;
+  font-size: 16px;
   text-align: center;
 }
 
@@ -163,6 +164,7 @@ footer {
 
 .finger {
   width: 200px;
+  overflow: hidden;
 }
 
 .finger:nth-child(1) {
@@ -188,6 +190,9 @@ footer {
 }
 
 @media (max-width: 1440px) {
+  header {
+    margin: 2rem 0;
+  }
   .subtitle h3 {
     font-size: 30px;
   }
@@ -204,6 +209,9 @@ footer {
     width: 100%;
     height: 100%;
   }
+  footer {
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -217,11 +225,8 @@ footer {
   nav {
     margin: 3rem 0 1rem 0;
   }
-  .finger {
-    width: 100px;
-  }
   .star {
-    height: 50px;
+    display: none;
   }
   .navlink {
     font-size: 50px;
